@@ -3849,8 +3849,6 @@ meta_window_focus (MetaWindow  *window,
     }
   else
     {
-      meta_error_trap_push (window->display);
-      
       if (window->input)
         {
           meta_topic (META_DEBUG_FOCUS,
@@ -3872,8 +3870,6 @@ meta_window_focus (MetaWindow  *window,
                                           timestamp);
           window->display->expected_focus_window = window;
         }
-      
-      meta_error_trap_pop (window->display, FALSE);
     }
 
   if (window->wm_state_demands_attention)
