@@ -1,5 +1,14 @@
 2006-10-01  Elijah Newren  <newren gmail com>
 
+	* src/display.c (meta_display_set_input_focus_window):
+	* src/window.c (meta_window_focus):
+	Don't require a push/pop trap around
+	meta_display_set_input_focus_window(), but rather move the
+	push/pop into that function surrounding the XSetInputFocus() call
+	directly.  Follow up to #358514.
+
+2006-10-01  Elijah Newren  <newren gmail com>
+
 	* src/window-props.c (set_title_text): surround the
 	XDeleteProperty() call with a
 	meta_error_trap_push/meta_error_trap_pop pair to prevent a crash
